# CodeKeeper

./: .env.example  .gitignore  README.md  ai-analyzer.yaml.example  config.yaml.example  progress.md  pyproject.toml  pytest.ini  requirements.txt
docs/: .todo-remaining-features.md.swp  API.md  DEPLOYMENT.md  USER_GUIDE.md  llm-testing-progress.md  test-implementation-plan.md  testing-strategy.md  todo-remaining-features.md
docs/plans/: 2026-03-07-git-deep-analyzer.md  2026-03-08-issue-deep-analyzer-prd.md  2026-03-09-issue-deep-analyzer-implementation.md  2026-03-09-issue-deep-analyzer-prd.md
scripts/: deploy_production.sh  run_tests.sh
skills/ai-analysis-prompts/: SKILL.md
skills/enhanced-tdd/: SKILL.md
src/git_deep_analyzer/: __init__.py  cli.py  config.py
src/git_deep_analyzer/ai/: __init__.py  analysis_strategy.py  business_analyzer.py  clients.py  clients_cli.py  evolution_analyzer.py  logger.py  retry_handler.py  technical_analyzer.py  template_manager.py
src/git_deep_analyzer/code_parser/: __init__.py  base.py  cache.py  concurrency_detector.py  incremental.py  parallel.py  parser_cpp.py  parser_python.py  pattern_matcher.py
src/git_deep_analyzer/config/: __init__.py  config.py  hot_reload.py  interactive.py
src/git_deep_analyzer/git_collector/: __init__.py  collector.py  diff_extractor.py  models.py  time_analyzer.py
src/git_deep_analyzer/integrations/: __init__.py  issue_commit_linker.py
src/git_deep_analyzer/language/: __init__.py  detector.py
src/git_deep_analyzer/plugins/: __init__.py  plugin_base.py
src/git_deep_analyzer/reporting/: __init__.py  data_visualizer.py  html_generator.py  markdown_generator.py  models.py  multi_detail_reports.py  report_interactions.py
src/git_deep_analyzer/utils/: __init__.py  batch_operations.py  cache.py
src/issue_analyzer/: __init__.py  logger.py  main.py  metrics.py
src/issue_analyzer/api/: __init__.py  health.py
src/issue_analyzer/config/: __init__.py  models.py  (+1 more)
tests/: __init__.py  conftest.py  test_ai_client.py  test_ai_logger.py  test_analysis_strategy.py  test_business_analyzer.py  test_clients_cli.py  test_code_parser.py  test_config.py  test_config_errors.py  test_config_interactive.py  test_data_visualizer.py  test_diff_extractor.py  test_doc_llm_parser.py  test_edge_cases.py  test_evolution_analyzer.py  test_feishu_docs.py  test_git_collector.py  test_git_collector_tdd.py  test_github_tracker.py  test_gitlab_tracker.py  test_html_generator.py  test_issue_tracker.py  test_language_detector.py  test_markdown_generator.py  test_multi_detail_reports.py  test_p0_config.py  test_p0_health.py  test_p0_logger.py  test_p0_metrics.py  test_p0_models.py  test_p0_setup.py  test_report_interactions.py  test_report_models.py  test_retry_handler.py  test_setup.py  test_technical_analyzer.py  test_template_manager.py  test_time_analyzer.py
tests/p1/: test_commit_parser.py  test_doc_system.py  test_git_base.py  test_github_client.py  test_gitlab_client.py  test_repo_list.py
(+33 files in other folders)
