[project]
name = "git-deep-analyzer"
version = "0.1.0"
description = "Deep analysis of git commits with AI"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "GitPython>=3.1.40",
    "Jinja2>=3.1.2",
    "python-dateutil>=2.8.2",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.0",
    "aiohttp>=3.9.0",
    "joblib>=1.3.0",
]

[project.scripts]
git-deep-analyze = "git_deep_analyzer.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
