[project]
name = "git-deep-analyzer"
version = "0.1.0"
description = "Deep analysis of git commits with AI-powered insights"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.0",
    "GitPython>=3.1.40",
    "Jinja2>=3.1.2",
    "python-dateutil>=2.8.2",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.0",
    "aiohttp>=3.9.0",
    "joblib>=1.3.0",
    "typing-extensions>=4.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
]
cpp = [
    "libclang>=16.0.0",
]

[project.scripts]
git-deep-analyze = "git_deep_analyzer.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/git_deep_analyzer",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=75",
    "--strict-markers",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100
