[project]
name = "issue-deep-analyzer"
version = "0.1.0"
description = "Deep analysis of issues with LLM"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.2",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "prometheus-client>=0.19.0",
    "python-gitlab>=4.0.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "GitPython>=3.1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
]

[project.scripts]
issue-analyzer = "issue_analyzer.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
